testsuite/tests/properties/invalidation_during_mmz/expected_concrete_syntax.lkt
grammar None_grammar {
    main_rule <- Example("example")

}

@abstract class FooNode {
}

class Example : FooNode {

    fun fetch_example_unit (): InternalUnit

    @memoized fun internal_mmz_prop (i : Integer): Integer =
    if (i = 0) then (raise PropertyError()) else i

    @export @memoized fun mmz_prop (i : Integer): Integer = {
        # Update context version by parsing a new unit
        val _ = self.fetch_example_unit;

        # Trigger a cache clear by calling another property
        # (which will call Reset_Caches).
        self.internal_mmz_prop(i)
    }
}
